# Numerical_Sequences

./: CMakeLists.txt  README.md  Source.cpp
